--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/d3": "^7.4.1",
+		"@types/d3-force": "^3.0.6",
 		"@zerodevx/svelte-toast": "^0.9.5",
 		"autoprefixer": "^10.4.15",
 		"postcss": "^8.4.29",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
+		"svelte-carousel": "^1.0.25",
 		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.3",
 		"vite": "^4.4.2"
@@ -26,6 +29,7 @@
 	"type": "module",
 	"dependencies": {
 		"@vercel/analytics": "^1.1.0",
+		"d3": "^7.8.5",
 		"feather-icons": "^4.29.1"
 	}
 }
