--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
 		"preview": "vite preview",
 		"lint": "prettier --plugin-search-dir . --check .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"postbuild": "npx svelte-sitemap --out-dir .vercel/output/static --domain https://www.ajou.in"
+		"postbuild": "npx svelte-sitemap --out-dir .vercel/output/static --domain https://www.ajou.in",
+		"embeddings": "npx tsx src/lib/server/generate-embeddings.ts",
+		"embeddings:refresh": "npx tsx src/lib/server/generate-embeddings.ts --refresh"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/common-tags": "^1.8.1",
 		"@types/d3": "^7.4.1",
 		"@types/d3-force": "^3.0.6",
 		"@types/dompurify": "^3.0.4",
+		"@types/mdast": "^3.0.11",
+		"@types/yargs": "^17.0.24",
 		"@zerodevx/svelte-toast": "^0.9.5",
 		"autoprefixer": "^10.4.15",
 		"postcss": "^8.4.29",
@@ -26,17 +31,38 @@
 		"svelte-carousel": "^1.0.25",
 		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.3",
+		"ts-node": "^10.9.1",
+		"typescript": "^5.2.2",
 		"vite": "^4.4.2"
 	},
 	"type": "module",
 	"dependencies": {
+		"@nextlint/svelte": "^1.1.2",
+		"@supabase/supabase-js": "^2.38.4",
 		"@tinymce/tinymce-svelte": "^1.0.1",
 		"@vercel/analytics": "^1.1.0",
+		"ai": "^2.2.20",
+		"common-tags": "^1.8.2",
 		"d3": "^7.8.5",
 		"dompurify": "^3.0.6",
+		"dotenv": "^16.0.3",
 		"feather-icons": "^4.29.1",
+		"github-slugger": "^2.0.0",
+		"gpt3-tokenizer": "^1.1.5",
 		"isomorphic-dompurify": "^1.9.0",
+		"mdast": "^3.0.0",
+		"mdast-util-from-markdown": "^1.2.0",
+		"mdast-util-mdx": "^2.0.0",
+		"mdast-util-to-markdown": "^1.5.0",
+		"mdast-util-to-string": "^3.1.1",
+		"micromark-extension-mdxjs": "^1.0.0",
+		"node-html-markdown": "^1.3.0",
+		"openai": "^4.0.0",
+		"openai-edge": "^1.1.0",
 		"suneditor": "^2.45.1",
-		"tinymce": "^6.7.0"
+		"tinymce": "^6.7.0",
+		"unist-builder": "^3.0.1",
+		"unist-util-filter": "^4.0.1",
+		"yargs": "^17.7.2"
 	}
 }
