--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"rollup-plugin-copy": "^3.5.0",
+		"sass": "^1.69.5",
 		"svelte": "^4.0.5",
 		"svelte-carousel": "^1.0.25",
 		"svelte-sitemap": "^2.6.0",
