--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
 		"postbuild": "npx svelte-sitemap --out-dir .vercel/output/static --domain https://www.ajou.in"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"svelte": "^4.2.7",
+		"vite": "^5.0.3",
 		"@zerodevx/svelte-toast": "^0.9.5",
 		"autoprefixer": "^10.4.15",
 		"postcss": "^8.4.29",
@@ -20,11 +23,9 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"rollup-plugin-copy": "^3.5.0",
 		"sass": "^1.69.5",
-		"svelte": "^4.0.5",
 		"svelte-carousel": "^1.0.25",
 		"svelte-sitemap": "^2.6.0",
-		"tailwindcss": "^3.3.3",
-		"vite": "^4.4.2"
+		"tailwindcss": "^3.3.3"
 	},
 	"type": "module",
 	"dependencies": {
