--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth/core": "^0.34.1",
+		"@auth/sveltekit": "^1.4.1",
 		"@vercel/analytics": "^1.1.0",
 		"dotenv": "^16.0.3",
 		"feather-icons": "^4.29.1"
