--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"rollup-plugin-copy": "^3.5.0",
 		"sass": "^1.69.5",
-		"svelte": "^4.2.7",
+		"svelte": "^4.2.18",
 		"svelte-carousel": "^1.0.25",
 		"svelte-sitemap": "^2.6.0",
 		"tailwindcss": "^3.3.3",
@@ -31,7 +31,9 @@
 	"dependencies": {
 		"@auth/core": "^0.34.1",
 		"@auth/sveltekit": "^1.4.1",
+		"@svelte-plugins/datepicker": "^1.0.9",
 		"@vercel/analytics": "^1.1.0",
+		"date-fns": "^3.6.0",
 		"dotenv": "^16.0.3",
 		"feather-icons": "^4.29.1"
 	}
